syntax = "proto3";
package rollkit.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "rollkit/v1/rollkit.proto";

option go_package = "github.com/rollkit/rollkit/types/pb/rollkit";


// State is the state of the blockchain.
message State {
  rollkit.v1.Version version = 1;

  string chain_id = 2;
  uint64 initial_height = 3;

  uint64 last_block_height = 4;

  google.protobuf.Timestamp last_block_time = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];


  bytes last_results_hash = 14;

  bytes app_hash = 15;
}
